# bi-fastapi-logger

./: .python-version  README.md  pyproject.toml
app/: main.py
